@@ -1,7 +1,5 @@
 package hw3.dto;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Random;
 
@@ -11,7 +9,7 @@ public enum AnimalsEnum {
     BEAR,
     TIGER;
 
-    private static final List<AnimalsEnum> VALUES = Collections.unmodifiableList(Arrays.asList(values()));
+    private static final List<AnimalsEnum> VALUES = List.of(values());
     private static final int SIZE = VALUES.size();
     private static final Random RANDOM = new Random();
 
