@@ -1,7 +1,5 @@
 package hw3.dto.Predator;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Random;
 
@@ -15,7 +13,7 @@ public enum TigerBreeds {
     BALI_TIGER,
     JAPAN_TIGER;
 
-    private static final List<TigerBreeds> VALUES = Collections.unmodifiableList(Arrays.asList(values()));
+    private static final List<TigerBreeds> VALUES = List.of(values());
     private static final int SIZE = VALUES.size();
     private static final Random RANDOM = new Random();
 
